--- a/src/components/layouts/header/style.scss
+++ b/src/components/layouts/header/style.scss
@@ -1,46 +1,37 @@
-// .outer-menu {
-//   z-index: 1;
-//   .hamburger {
-//     position: absolute;
-//     top: 15px;
-//     right: 0;
-//     z-index: 1;
-//     width: 50px;
-//     padding: 0.5em 12px;
-//     border-radius: 0 0.12em 0.12em 0;
-//     cursor: pointer;
-//     transition: box-shadow 0.4s ease;
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
+.outer-menu {
+  .menu {
+    .sidemenu-main {
+      @apply h-screen flex justify-center content-center items-center;
 
-//     > div {
-//       position: relative;
-//       flex: none;
-//       width: 100%;
-//       height: 2px;
-//       background: #fefefe;
-//       transition: all 0.4s ease;
-//       display: flex;
-//       align-items: center;
-//       justify-content: center;
+      .side-menu-text {
+        @apply text-8xl text-[#212529ed] rotate-180 font-extrabold uppercase writing-vertical-rl w-1/6 px-3 hidden lg:block;
+      }
 
-//       &::after,
-//       &::before {
-//         content: "";
-//         position: absolute;
-//         z-index: 1;
-//         top: -10px;
-//         left: 0;
-//         width: 100%;
-//         height: 2px;
-//         background: inherit;
-//         transition: all 0.4s ease;
-//       }
+      .side-menu-scroll {
+        @apply h-full flex flex-col justify-center overflow-x-auto w-full lg:w-7/12;
 
-//       &::after {
-//         top: 10px;
-//       }
-//     }
-//   }
-// }
+        .heading {
+          @apply text-4xl font-semibold uppercase tracking-[1px] border px-7 py-2.5 border-solid border-[#ffffff0d];
+        }
+      }
+
+      .cont-info {
+        @apply w-1/4 px-3 hidden lg:block;
+
+        .item {
+          .sub-title-address {
+            @apply text-sm uppercase tracking-[2px] opacity-70 font-normal pb-5;
+          }
+
+          .geek-alto {
+            @apply text-xl font-medium leading-8 pb-20;
+          }
+
+          p a {
+            @apply text-white text-lg font-medium leading-8;
+          }
+        }
+      }
+    }
+  }
+}
