--- a/src/components/ScrollTop/styles.scss
+++ b/src/components/ScrollTop/styles.scss
@@ -14,4 +14,18 @@
 
     transform: rotate(-90deg);
   }
+
+  &::after {
+    position: absolute;
+    content: url("@/assets/images/upload.png");
+    text-align: center;
+    line-height: 50px;
+    font-size: 20px;
+    font-weight: 700;
+    left: 0;
+    top: 0;
+    height: 50px;
+    width: 50px;
+    cursor: pointer;
+  }
 }
