--- a/src/pages/home/section/BrandSection/styles.scss
+++ b/src/pages/home/section/BrandSection/styles.scss
@@ -1,37 +1,39 @@
-.embla {
-  padding-top: 40px;
-  margin: auto;
+.marquee-main {
+  .embla {
+    padding-top: 40px;
+    margin: auto;
 
-  &__viewport {
-    overflow: hidden;
-  }
-
-  &__container {
-    backface-visibility: hidden;
-    display: flex;
-    touch-action: pan-y pinch-zoom;
-  }
-
-  &__slide {
-    flex: 0 0 15%;
-    @media (max-width: 1280px) {
-      flex: 0 0 20%;
-    }
-    @media (max-width: 1024px) {
-      flex: 0 0 25%;
-    }
-    @media (max-width: 576px) {
-      flex: 0 0 45%;
-    }
-    @media (max-width: 400px) {
-      flex: 0 0 55%;
+    &__viewport {
+      overflow: hidden;
     }
 
-    border: 1px solid var(--gray-3);
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 40px;
+    &__container {
+      backface-visibility: hidden;
+      display: flex;
+      touch-action: pan-y pinch-zoom;
+    }
+
+    &__slide {
+      flex: 0 0 15%;
+      @media (max-width: 1280px) {
+        flex: 0 0 20%;
+      }
+      @media (max-width: 1024px) {
+        flex: 0 0 25%;
+      }
+      @media (max-width: 576px) {
+        flex: 0 0 45%;
+      }
+      @media (max-width: 400px) {
+        flex: 0 0 55%;
+      }
+
+      border: 1px solid var(--gray-3);
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 40px;
+    }
   }
 }
